--- a/docs/items/Types/Mount/Deer/Normal_Deer_00001_00100.md
+++ b/docs/items/Types/Mount/Deer/Normal_Deer_00001_00100.md
@@ -324,21 +324,6 @@ tags:
 <div><strong>Spots:</strong> Yellow</div>
 </div>
 <div class="item_thumbnail">
-<a href="../../../Mount/Deer/Deer"><img loading="lazy" src="https://5bajs4dwqjahyjffirmfsqqd55hgdnwmaaiaq2iw6ceafttraa.arweave.net/6ECZcHaCQHwkpURYWUID705htswAEAhp-FvCIAs5xAA"></a><br/>
-<div><strong>Name:</strong> Deer #022</div>
-<div><strong>Item Type:</strong> <a href="../../../Mount/Deer/Deer">Deer</a></div>
-<div><strong>Collection:</strong> <a href="https://www.spacescan.io/xch/nft/collection/col1w0h8kkkh37sfvmhqgd4rac0m0llw4mwl69n53033h94fezjp6jaq4pcd3g">Chreatures</a></div>
-<div><strong>Accessory:</strong> Arrow</div>
-<div><strong>Antlers:</strong> Medium</div>
-<div><strong>Background:</strong> Scatter (Cyan)</div>
-<div><strong>Deer:</strong> Topaz</div>
-<div><strong>Eye:</strong> Pink</div>
-<div><strong>Fur:</strong> Sand</div>
-<div><strong>Hooves:</strong> Black (Flashy)</div>
-<div><strong>Nose:</strong> Black</div>
-<div><strong>Spots:</strong> Orange</div>
-</div>
-<div class="item_thumbnail">
 <a href="../../../Mount/Deer/Deer"><img loading="lazy" src="https://bjxe32uu22qdxty65uzxr6soczb3mmhgs6ers3mgcbg7kvhqle.arweave.net/Cm5N6pTWoDvPHu0zePpOFkO2M-OaXiRlthhBN9VTwWQ"></a><br/>
 <div><strong>Name:</strong> Deer #023</div>
 <div><strong>Item Type:</strong> <a href="../../../Mount/Deer/Deer">Deer</a></div>
@@ -1506,6 +1491,21 @@ tags:
 <div><strong>Fur:</strong> Sand</div>
 <div><strong>Hooves:</strong> Pink</div>
 <div><strong>Nose:</strong> Emerald</div>
+<div><strong>Spots:</strong> Sapphire</div>
+</div>
+<div class="item_thumbnail">
+<a href="../../../Mount/Deer/Deer"><img loading="lazy" src="https://cxnfjyyybhpghsocbvrba6lgxo7lehhvji2cjvhgctbjmomfavkq.arweave.net/FdpU4xgJ3mPJwg1iEHlmu76yHPVKNCTU5hTCljmFBVU"></a><br/>
+<div><strong>Name:</strong> Deer #101</div>
+<div><strong>Item Type:</strong> <a href="../../../Mount/Deer/Deer">Deer</a></div>
+<div><strong>Collection:</strong> <a href="https://www.spacescan.io/xch/nft/collection/col1w0h8kkkh37sfvmhqgd4rac0m0llw4mwl69n53033h94fezjp6jaq4pcd3g">Chreatures</a></div>
+<div><strong>Accessory:</strong> None</div>
+<div><strong>Antlers:</strong> Small</div>
+<div><strong>Background:</strong> Flat (Lavender)</div>
+<div><strong>Deer:</strong> Topaz</div>
+<div><strong>Eye:</strong> Black</div>
+<div><strong>Fur:</strong> Topaz</div>
+<div><strong>Hooves:</strong> Brown</div>
+<div><strong>Nose:</strong> Black</div>
 <div><strong>Spots:</strong> Sapphire</div>
 </div>
 
